# kucna_biblioteka

./: Biblioteka.csv  Biblioteka.csv.example  Biblioteka.desktop  Biblioteka.py  LICENSE  Makefile  Pokreni_Biblioteku.bat  README.md  autocomplete_entry.py  backup_utils.py  biblioteka_gui.py  biblioteka_gui.py.bak  book_service.py  config.py  data_adapter.py  data_adapter_compat.py  gui.py  help_texts.py  icon_manager.py  kucna_biblioteka.py  logger.py  models.py  models_compat.py  pokreni_biblioteku.sh  pyproject.toml  requirements.txt  scrollable_frame.py  settings.json  statistika.py  translations.py  utils.py
icons/: README.txt
tests/: __init__.py  test_models.py
